--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         
         <script>
             function copyThis() {
-                navigator.clipboard.writeText('7027156205')
+                navigator.clipboard.writeText('Nice. This will paste to a phone app.')
             }
         </script>
     </body>
